Fixing columns and some other safari alignment issues.

--- a/components/page-payment-bundles/page-payment-bundles.less
+++ b/components/page-payment-bundles/page-payment-bundles.less
@@ -2,6 +2,7 @@ page-payment-bundles {
   font-size: 10pt;
 
   header {
+    display: -webkit-flex;
     display: flex;
     margin: 2em 0 .5em;
     padding: 0 1.25em;
@@ -15,6 +16,7 @@ page-payment-bundles {
 
   .bundle-list-actions {
     text-align: right;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
 
     img {
